@@ -1,3 +1,8 @@
+2008-09-03  Andrew Pinski  <andrew_pinski@playstation.sony.com>
+
+	PR middle-end/37293
+	* g++.dg/torture/ipa-cp-1.C: New test.
+
 2008-09-03  David Edelsohn  <edelsohn@gnu.org>
 
 	* g++.dg/ext/java-2.C: Disable on AIX.
